Changed megaphone styles on certain saleflows. Bugfixes

--- a/src/app/modules/ecommerce/pages/megaphone-v3/megaphone-v3.component.scss
+++ b/src/app/modules/ecommerce/pages/megaphone-v3/megaphone-v3.component.scss
@@ -94,3 +94,15 @@
     padding-bottom: 0;
   }
 }
+
+.headerParagraph {
+  margin: 16px 36px 38px;
+  font-family: "RobotoRegular";
+  font-size: 16px;
+  color: #141414;
+
+  a {
+    color: #27A2FC;
+    cursor: pointer;
+  }
+}
